--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="container full-height-grow">
  
     <header class="main-header">
-        <a href="/" class="main-logo">
+        <a href="index.html" class="main-logo">
             <img src="images/home.png">
     </a>
     <nav class="main-nav">
