--- a/anime.html
+++ b/anime.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
 </header>
-<section>
+<section class="displayAnime">
     <button class="btn">click</button>
     <div >
         <ul class="list"></ul>
