--- a/recommendations.html
+++ b/recommendations.html
@@ -66,7 +66,7 @@
         </section>
 
         <footer>
-            <a href="anime.html"  class='footerLink' style="color: rgb(194, 45, 45);"><h2>Anime recommendations</h2></a>
+            <a href="anime.html"  class='footerLink' style="color: rgba(194, 45, 45,.7);"><h2>Anime recommendations</h2></a>
         </footer>
 
 
